typescript/checker/tests/conformance/es6/modules/exportsAndImports1.ts.stderr
error: ResolvedFailed {
    span: Span {
        lo: BytePos(
            426,
        ),
        hi: BytePos(
            478,
        ),
        ctxt: #0,
    },
    base: "$DIR/tests/conformance/es6/modules",
    src: Atom('./t1' type=inline),
}
  --> $DIR/tests/conformance/es6/modules/exportsAndImports1.ts:32:1
   |
32 | import { v, f, C, I, E, D, M, N, T, a } from "./t1";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

